[tool.poetry]
name = "strohb"
version = "0.0.0"
description = "Playground for data engineers"
authors = ["Brian Stroh <brianjstroh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
cfn-lint = "^0.85.0"    # for linting CloudFormation templates
codespell = "^2.2.6"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pydot = "^2.0.0"        # for previewing CloudFormation architecture graphs
ruff = "^0.1.13"
tomli = "^2.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = "./env"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
fix = true
target-version = "py311"
# Same as Black.
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
